[package]
name = "planetuium"
version = "0.1.0"
edition = "2024"

[dependencies]
astronomy-engine-bindings = "2.1.19"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
lazy_static = "1.5.0"
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
tzf-rs = "1.1.5"
zeno = "0.3.3"
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
anyhow = "1"
