[package]
name = "stellui"
version = "0.1.0"
edition = "2024"

[dependencies]
astronomy-engine-bindings = "2.1.19"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
anyhow = "1"
