[package]
name = "stellui"
version = "0.1.1"
edition = "2024"
description = "Terminal UI for stargazing — displays a live star chart with sun/moon positions and weather-based seeing quality forecasts"
license = "MIT"
repository = "https://github.com/maxb2/stellui"
keywords = ["astronomy", "tui", "stargazing", "terminal", "ratatui"]
categories = ["command-line-utilities", "science"]

[dependencies]
astronomy-engine-bindings = "2.1.19"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
anyhow = "1"
tzf-rs = "0.4"
chrono-tz = "0.10"
toml = { version = "0.8", features = ["parse"] }
